--- a/clean-playbook.yml
+++ b/clean-playbook.yml
@@ -15,3 +15,7 @@
     copy:
       content: ''
       dest: /etc/motd
+  - name: remove html content
+    file:
+      path: /var/www
+      state: absent    
